@@ -106,3 +106,4 @@ When a user whose password is close to expiry or has already expired logs in, a 
 Many Japanese translation updates, thanks to Kazuya Masuda.
 ---- Changes since 1.440 ----
 Russian translation updates, thanks to Anton Statutov.
+Webmin's serialization functions can now handle objects, which allows them to be passed as parameters to remote function calls. Both caller and recipient must have the object's class installed though.
